--- a/ppt/ppt.qrc
+++ b/ppt/ppt.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/new/prefix1">
         <file>ppt.png</file>
+        <file>rawppt.png</file>
     </qresource>
 </RCC>
